se agrega footer

--- a/contacto.html
+++ b/contacto.html
@@ -61,7 +61,21 @@
     </form>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="redesSociales">
+        <div class="iconos">
+            <a href="https://github.com/" target="_blank"><img class="Github" src="../img/icon github.svg" alt="Icono"></a>
+            <a href="https://www.linkedin.com/" target="_blank"><img class="Linkedin" src="../img/icon linkedin.svg" alt="Icono"></a>
+            <a href="https://www.youtube.com/" target="_blank"><img class="Youtube" src="../img/icon youtube.svg" alt="Icono"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="Instagram" src="../img/icon insta.svg" alt="Icono"></a>
+            <a href="https://es-la.facebook.com/" target="_blank"><img class="Facebook" src="../img/icon face.svg" alt="Icono"></a>
+        </div>        
+        </div>
+        <a class="btn-verde delFooter1" href="../contacto.html">Contáctanos</a>
+        <a class="btn-rosa delFooter" href="../FormCompleto.html">Solicitar reunión</a>
+        <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
+    </footer>
+    
     <script src="./Js/script.js"></script>
 </body>
 </html>
