cambios de formstyle css

--- a/FormCompleto.html
+++ b/FormCompleto.html
@@ -35,12 +35,12 @@
 <body>
     <div class="tab1" id="paso1">
         <h1>Con el fin de brindar una rápida respuesta y solución a nuestros clientes, le haremos algunas preguntas y le pediremos algunos datos:</h1>
-        <fieldset>
+        <fieldset class="Pres">
           <legend>Usted necesita asistencia del tipo:</legend>
           <label><input id="Presencial" type="radio" name="PresRem" value="Presencial" checked>Presencial</label>
           <label><input id="Remota" type="radio" name="PresRem" value="Remota">Remota</label>
         </fieldset>
-        <fieldset>
+        <fieldset class="Urge">
           <legend>Caracter de la consulta:</legend>
           <label><input id="Urgente" type="radio" name="UrgMod" value="Urgente" checked>Urgente</label>
           <label><input id="Moderado" type="radio" name="UrgMod" value="Moderado">Moderado</label>
