--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </div>
 
                     <div class="enlaces">
-                        <a class="botonConBorde" href="./contacto.html">CONTÁCTANOS</a>
+                        <a class="botonConBorde" href="./pages/contacto.html">CONTÁCTANOS</a>
                         <a href="#nosotros">NOSOTROS</a>
                         <a href="#soluciones">SOLUCIONES</a>
                         <a href="#oficinas">OFICINAS</a>
@@ -42,7 +42,7 @@
             <p>Somos una empresa dedicada al desarrollo de software. <br>
                 Soluciones pensadas para tu empresa. <br>
                 Potecia tu crecimiento.</p><br>
-                <div><a class="btn-verde" href="./contacto.html">Contáctanos</a>
+                <div><a class="btn-verde" href="./pages/contacto.html">Contáctanos</a>
                 </div>                
         </div>
     
@@ -57,7 +57,7 @@
             <p>Serás parte en cada paso del proceso.
                 Integremos tu experia en una solución virtual para tu empresa y tus clientes. <strong> Que esperas</strong>?</p>
                 <div class="botonContactenosDeNosotros">
-                    <a class="btn-rosa" href="./contacto.html">Contáctanos</a>
+                    <a class="btn-rosa" href="./pages/contacto.html">Contáctanos</a>
                 </div>                
         </div>
 
@@ -65,24 +65,24 @@
             <span class="tituloColaboradores">Harán tu vida más  <strong>fácil</strong>... conócelos!</span>
             <div class="containerColaboradores">
             <div class="colaborador1">
-                <a class="sobresalir" href="./pages/portfolio.html">
+                <a  id="clickYair" class="sobresalir" href="./pages/portfolio.html">
                 <div class="imgColaborador1"></div>
             </a>
-                <span class="nombreColaborador">Gustavo</span>
+                <span id="nombreColaborador" class="nombreColaborador">Yair Sansó</span>
                 <p class="aptitudesColaborador">Desarrollador Web</p>
             </div>
             <div class="colaborador2">
                 <a class="sobresalir" href="./pages/portfolio.html">
                 <div class="imgColaborador2"></div>
             </a>
-                <span class="nombreColaborador">Jesica</span>
+                <span class="nombreColaborador">Jesica Antonin</span>
                 <p class="aptitudesColaborador">Desarrollador Web</p>
             </div>
             <div class="colaborador3">
                 <a class="sobresalir" href="./pages/portfolio.html">
                 <div class="imgColaborador3"></div>
             </a>
-                <span class="nombreColaborador">Yair</span>
+                <span class="nombreColaborador">Gustavo</span>
                 <p class="aptitudesColaborador">Desarrollador Web</p>
             </div>
         </div>
@@ -121,7 +121,7 @@
             <p class="descripcionSolucion"><strong>Tecnologías: </strong>  html - css - javaScript</p>
             </div>
         </div>
-        <a class="btn-verde" href="./contacto.html">Contáctanos</a>
+        <a class="btn-verde" href="./pages/contacto.html">Contáctanos</a>
         </div>
 
         <div class="seccionOficinas margenScroll" id="oficinas">
@@ -163,7 +163,7 @@
         </div>        
         </div>
 
-        <a class="btn-verde delFooter1" href="./contacto.html">Contáctanos</a>
+        <a class="btn-verde delFooter1" href="./pages/contacto.html">Contáctanos</a>
         <a class="btn-rosa delFooter" href="./FormCompleto.html">Solicitar reunión</a>
         <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
     </footer>
