--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
                 </a>
                 </div>
                 <div class="enlaces">
-                    <a class="botonConBorde" href="../contacto.html">CONTÁCTANOS</a>
+                    <a class="botonConBorde" href="./pages/contacto.html">CONTÁCTANOS</a>
                     <a href="../index.html#nosotros">NOSOTROS</a>
                     <a href="../index.html#soluciones">SOLUCIONES</a>
                     <a href="../index.html#oficinas">OFICINAS</a>
