modifico enlaces y css

--- a/index.html
+++ b/index.html
@@ -65,24 +65,24 @@
             <span class="tituloColaboradores">Harán tu vida más  <strong>fácil</strong>... conócelos!</span>
             <div class="containerColaboradores">
             <div class="colaborador1">
-                <a  id="clickYair" class="sobresalir" href="./pages/portfolio.html">
+                <a  id="clickYair" class="sobresalir" href="./pages/portfolioYair.html">
                 <div class="imgColaborador1"></div>
             </a>
                 <span id="nombreColaborador" class="nombreColaborador">Yair Sansó</span>
                 <p class="aptitudesColaborador">Desarrollador Web</p>
             </div>
             <div class="colaborador2">
-                <a class="sobresalir" href="./pages/portfolio.html">
+                <a class="sobresalir" href="./pages/portfolioJesica.html">
                 <div class="imgColaborador2"></div>
             </a>
                 <span class="nombreColaborador">Jesica Antonin</span>
                 <p class="aptitudesColaborador">Desarrollador Web</p>
             </div>
             <div class="colaborador3">
-                <a class="sobresalir" href="./pages/portfolio.html">
+                <a class="sobresalir" href="./pages/portfolioGustavo.html">
                 <div class="imgColaborador3"></div>
             </a>
-                <span class="nombreColaborador">Gustavo</span>
+                <span class="nombreColaborador">Gustavo Müller</span>
                 <p class="aptitudesColaborador">Desarrollador Web</p>
             </div>
         </div>
