--- a/pages/portfolioJesica.html
+++ b/pages/portfolioJesica.html
@@ -50,11 +50,11 @@
             <div class="sobresalirImgCircular">
                 <div class="imgCircularColaborador" id="imgCircularPortfolio"></div>   
             </div>
-            <div class="seccionSobreMi">
-                <h2 class="sobreMi">Sobre mí</h2><br>
+            <div class="seccionSobreMi" id="sobreMi">
+                <!-- <h2 class="sobreMi">Sobre mí</h2><br>
                 <p id="detalleSobreMi1">Me gustan los deportes extremos y andar en cayak.</p>
                 <p id="detalleSobreMi2">Suelo llevar mi notebook a mis viajes para no dejar escapar una nueva idea.</p>
-                <p id="hobbies">Mis hobbies: Ciclismo, Viajar, krav maga.</p>
+                <p id="hobbies">Mis hobbies: Ciclismo, Viajar, krav maga.</p> -->
         </div>
         <div class="seccionSoluciones">
             <span class="tituloSoluciones"> Mis desarrollos y colaboraciones</span>
@@ -103,6 +103,6 @@
         <a class="btn-rosa delFooter" href="../FormCompleto.html">Solicitar reunión</a>
         <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
     </footer>
-    <script src="../Js/script.js"></script>
+    <script src="../Js/scriptPortfolioJesica.js"></script>
 </body>
 </html>
