dificultades con el git deskopt

--- a/FormCompleto.html
+++ b/FormCompleto.html
@@ -4,47 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./FormStyle.css">
-    <link rel="icon" type="imagen/ico" href="../img/favicon.svg">
     <title>FormularioTresPasos</title>
 </head>
 
-<header>
-  <nav>
-      <div class="encabezadoFijo">
-          <div class="logo">
-              <a href="./index.html">
-              <img class="favicon" src="./img/favicon.svg" alt="Icono">
-              <h2 >DevScrum</h2>
-          </a>
-          </div>
-
-          <div class="enlaces">
-              <a class="botonConBorde" href="./contacto.html">CONTÁCTANOS</a>
-              <a href="#nosotros">NOSOTROS</a>
-              <a href="#soluciones">SOLUCIONES</a>
-              <a href="#oficinas">OFICINAS</a>
-              <a class="textoNegrita" href="./FormCompleto.html">SOLICITAR REUNIÓN</a>
-          </div>
-          <button class="btn-menu">
-              <i class="bi bi-list"></i>
-          </button>
-      </div>
-  </nav>
-</header>
-
+<header></header>
 <body>
     <div class="tab1" id="paso1">
         <h1>Con el fin de brindar una rápida respuesta y solución a nuestros clientes, le haremos algunas preguntas y le pediremos algunos datos:</h1>
-        <fieldset class="Pres">
+        <fieldset>
           <legend>Usted necesita asistencia del tipo:</legend>
           <label><input id="Presencial" type="radio" name="PresRem" value="Presencial" checked>Presencial</label>
           <label><input id="Remota" type="radio" name="PresRem" value="Remota">Remota</label>
         </fieldset>
-        <fieldset class="Urge">
+        <fieldset>
           <legend>Caracter de la consulta:</legend>
           <label><input id="Urgente" type="radio" name="UrgMod" value="Urgente" checked>Urgente</label>
           <label><input id="Moderado" type="radio" name="UrgMod" value="Moderado">Moderado</label>
@@ -114,20 +87,6 @@
 </body>
     <main></main>
 
-    <footer>
-      <div class="redesSociales">
-      <div class="iconos">
-          <a href="https://github.com/" target="_blank"><img class="Github" src="./img/icon github.svg" alt="Icono"></a>
-          <a href="https://www.linkedin.com/" target="_blank"><img class="Linkedin" src="./img/icon linkedin.svg" alt="Icono"></a>
-          <a href="https://www.youtube.com/" target="_blank"><img class="Youtube" src="./img/icon youtube.svg" alt="Icono"></a>
-          <a href="https://www.instagram.com/" target="_blank"><img class="Instagram" src="./img/icon insta.svg" alt="Icono"></a>
-          <a href="https://es-la.facebook.com/" target="_blank"><img class="Facebook" src="./img/icon face.svg" alt="Icono"></a>
-      </div>        
-      </div>
-
-      <a class="btn-verde delFooter1" href="./contacto.html">Contáctanos</a>
-      <a class="btn-rosa delFooter" href="./FormCompleto.html">Solicitar reunión</a>
-      <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
-  </footer>
+    <footer></footer>
 
 </html>
