se modifica css

--- a/pages/Resumen.html
+++ b/pages/Resumen.html
@@ -35,19 +35,22 @@
         </nav>
 </header>
     <main>
-    <form>
-        <h1 class="exito">Su solicitud fue exitosa</h1>
+    <section class="resumen">
 
-        <div class="datos">
-            <a href=>Datos Personales:</a>
-        </div>    
-        <div class="Contenido">
-            <a href="Nombre">Nombre:</a>
-            <a href="Apellido">Apellido:</a>
-            <a href="Direccion">Direccion:</a>
-            <a href="Telefono">Telefono:</a>
-            <a href="Email">Email:</a>    
-        </div>
+        <h1>Su solicitud fue exitosa</h1>
+
+        <h2>Datos Personales:</h2>
+        
+            <a class="datos" href="Nombre">Nombre</a>
+            <input class="controls" type="text" name="Nombre" id="Nombre" placeholder="">
+            <a class="datos" href="Apellido">Apellido</a>
+            <input class="controls" type="text" name="Apellido" id="Apellido" placeholder="">
+            <a class="datos" href="Dieccion">Direccion</a>
+            <input class="controls" type="text" name="Direccion" id="Direccion" placeholder="">
+            <a class="datos" href="Telefono">Telefono</a>
+            <input class="controls" type="Telefono" name="Telefono" id="Telefono" placeholder="">
+            <a class="datos" href="Email">Email</a>
+            <input class="controls" type="Email" name="Email" id="Email" placeholder="">
 
         <div class="ReservaExitosa">
             <h2>Su consulta fue resevada</h2>
@@ -80,7 +83,7 @@
         <input class="btnExport" id="btnExport" type="submit" value="Export PDF">
         </div>
         
-    </form>
+    </section>
     </main>
 </body>
 <footer>
