--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,33 +35,29 @@
             </div>
         </nav>
 </header>
+
     <main>
-    <form>
-        <h2>Contactanos</h2>
+    <section class="form-contacto">
 
-        <div class="container">
-            <a href="Nombre">Nombre</a>
-            <input type="text" name="Nombre" placeholder="Nombre">
-            <a href="Apellido">Apellido</a>
-            <input type="Apellido" name="Apellido" placeholder="Apellido">
-            <a href="Direccion">Direccion</a>
-            <input type="text" name="Direccion" placeholder="Direccion">
-            <a href="Telefono">Telefono</a>
-            <input type="Telefono" name="Telefono" placeholder="Telefono">
-            <a href="Email">Email</a>
-            <input type="Email" name="Email" placeholder="Email">
-            <a href="Crear contraseña">Crear Contraseña</a>
-            <input type="text" name="Crear Contraseña" placeholder="Crear Contraseña">
-            <a href="Repetir contraseña">Repetir Contraseña</a>
-            <input type="text" name="Repetir Contraseña" placeholder="Repetir Contraseña">
+        <h2>Formulario de Contacto</h2>
+
+            <a class="datos" href="Nombre">Nombre</a>
+            <input class="controls" type="text" name="Nombre" id="Nombre" placeholder="Ingrese su Nombre">
+            <a class="datos" href="Apellido">Apellido</a>
+            <input class="controls" type="text" name="Apellido" id="Apellido" placeholder="Ingrese su Apellido">
+            <a class="datos" href="Dieccion">Direccion</a>
+            <input class="controls" type="text" name="Direccion" id="Direccion" placeholder="Ingrese su Direccion">
+            <a class="datos" href="Telefono">Telefono</a>
+            <input class="controls" type="Telefono" name="Telefono" id="Telefono" placeholder="Ingrese su Telefono">
+            <a class="datos" href="Email">Email</a>
+            <input class="controls" type="Email" name="Email" id="Email" placeholder="Ingrese su Email">
+
+        <div class="botones">
+            <input class="btnEnviar" type="submit" value="Enviar">
+            <input class="btnCancelar" type="submit" value="Cancelar">
         </div>
 
-        <div class="btnContacto">
-        <input class="btnEnviar" type="submit" value="Enviar">
-        <input class="btnCancelar" type="submit" value="Cancelar">
-        </div>
-        
-    </form>
+    </section>
     </main>
 
     <footer>
