se modifica estructura html

--- a/pages/Resumen.html
+++ b/pages/Resumen.html
@@ -38,7 +38,8 @@
     <section class="resumen">
 
         <h1>Su solicitud fue exitosa</h1>
-
+        
+        <div>
         <h2>Datos Personales:</h2>
         
             <a class="datos" href="Nombre">Nombre</a>
@@ -51,6 +52,7 @@
             <input class="controls" type="Telefono" name="Telefono" id="Telefono" placeholder="">
             <a class="datos" href="Email">Email</a>
             <input class="controls" type="Email" name="Email" id="Email" placeholder="">
+        </div>
 
         <div class="ReservaExitosa">
             <h2>Su consulta fue resevada</h2>
