Se realizan cambios a raíz de las observaciones de Matías en la clase.

--- a/index.html
+++ b/index.html
@@ -37,30 +37,32 @@
             </nav>
     </header>
     <main>
+        <!-- Sección de presentación de la empresa -->
         <div class="presentacionEmpresa">
-            <h2>Tu evolución, nuestra prioridad</h2>
+            <h1>Tu evolución, nuestra prioridad</h1>
             <p>Somos una empresa dedicada al desarrollo de software. <br>
                 Soluciones pensadas para tu empresa. <br>
-                Potecia tu crecimiento.</p><br>
-                <div><a class="btn-verde" href="./pages/contacto.html">Contáctanos</a>
+                Potecia tu crecimiento.</p>
+                <div><a class="btn-rosa" href="./pages/contacto.html">Contáctanos</a>
                 </div>                
         </div>
     
+        <!-- Sección nosotros -->
         <div class="seccionNosotros margenScrollNosotros" id="nosotros">
             <span  ><strong>Adelante!</strong>, conoce un poco sobre nosotros.</span>
         </div>
         <div class="nosotros " >
             <h3>Conformamos una basta experiencia</h3>
-            <br>
             <h3>...para brindarte la mejor solución.</h3>
             <p>Déjate llevar por el mejor equipo de desarrolladores del mercado, con un solo enfoque... brindarte las mejores soluciones para tu empresa.</p>
             <p>Serás parte en cada paso del proceso.
                 Integremos tu experia en una solución virtual para tu empresa y tus clientes. <strong> Que esperas</strong>?</p>
-                <div class="botonContactenosDeNosotros">
+               <!--  <div class="botonContactenosDeNosotros">
                     <a class="btn-rosa" href="./pages/contacto.html">Contáctanos</a>
-                </div>                
+                </div>     -->            
         </div>
 
+        <!-- Sección de colaboradores -->
         <div class="seccionColaboradores">
             <span class="tituloColaboradores">Harán tu vida más  <strong>fácil</strong>... conócelos!</span>
             <div class="containerColaboradores">
@@ -69,28 +71,29 @@
                 <div class="imgColaborador1"></div>
             </a>
                 <span id="nombreColaborador" class="nombreColaborador">Yair Sansó</span>
-                <p class="aptitudesColaborador">Desarrollador Web</p>
+                <p class="aptitudesColaborador">Data Science <br>Desarrollador IA</p>
             </div>
             <div class="colaborador2">
                 <a class="sobresalir" href="./pages/portfolioJesica.html">
                 <div class="imgColaborador2"></div>
             </a>
                 <span class="nombreColaborador">Jesica Antonin</span>
-                <p class="aptitudesColaborador">Desarrollador Web</p>
+                <p class="aptitudesColaborador">Desarrollador de software <br>Diseñadora gráfica </p>
             </div>
             <div class="colaborador3">
                 <a class="sobresalir" href="./pages/portfolioGustavo.html">
                 <div class="imgColaborador3"></div>
             </a>
                 <span class="nombreColaborador">Gustavo Müller</span>
-                <p class="aptitudesColaborador">Desarrollador Web</p>
+                <p class="aptitudesColaborador">Desarrollador Web FullStack <br>Arquitecto de base de datos </p>
             </div>
         </div>
         <a class="btn-rosa" href="./FormCompleto.html">Solicitar reunión</a>
         </div>
 
+        <!-- Sección de soluciones -->
         <div class="seccionSoluciones margenScroll" id="soluciones">
-            <span class="tituloColaboradores"><strong> Conoce nuestras soluciones</strong></span>
+            <span class="tituloSoluciones"><strong> Conoce nuestras soluciones</strong></span>
             <div class="containerColaboradores">
 
                 <div class="colaborador1">
@@ -121,9 +124,11 @@
             <p class="descripcionSolucion"><strong>Tecnologías: </strong>  html - css - javaScript</p>
             </div>
         </div>
-        <a class="btn-verde" href="./pages/contacto.html">Contáctanos</a>
+        <br>
+        <a class="btn-rosa" href="./pages/contacto.html">Contáctanos</a>
         </div>
 
+        <!-- Sección de oficinas -->
         <div class="seccionOficinas margenScroll" id="oficinas">
             <span class="oficinas tituloColaboradores"><strong>Nuestras oficinas</strong></span>
             <div class="containerColaboradores">
@@ -163,7 +168,7 @@
         </div>        
         </div>
 
-        <a class="btn-verde delFooter1" href="./pages/contacto.html">Contáctanos</a>
+        <a class="btn-rosa delFooter1" href="./pages/contacto.html">Contáctanos</a>
         <a class="btn-rosa delFooter" href="./FormCompleto.html">Solicitar reunión</a>
         <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
     </footer>
