--- a/pages/Resumen.html
+++ b/pages/Resumen.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../Style/ContactStyle.css">
+    <link rel="stylesheet" href="../Style/ResumStyle.css">
     <link rel="icon" type="imagen/ico" href="../img/favicon.svg">
     <title>Resumen de Formulario</title>
 </head>
@@ -22,7 +22,7 @@
                 </a>
                 </div>
                 <div class="enlaces">
-                    <a class="botonConBorde" href="../contacto.html">CONTÁCTANOS</a>
+                    <a class="botonConBorde" href="./contacto.html">CONTÁCTANOS</a>
                     <a href="../index.html#nosotros">NOSOTROS</a>
                     <a href="../index.html#soluciones">SOLUCIONES</a>
                     <a href="../index.html#oficinas">OFICINAS</a>
@@ -93,7 +93,7 @@
         <a href="https://es-la.facebook.com/" target="_blank"><img class="Facebook" src="../img/icon face.svg" alt="Icono"></a>
     </div>        
     </div>
-    <a class="btn-verde delFooter1" href="../contacto.html">Contáctanos</a>
+    <a class="btn-rosa delFooter1" href="./contacto.html">Contáctanos</a>
     <a class="btn-rosa delFooter" href="../FormCompleto.html">Solicitar reunión</a>
     <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
 </footer>
