--- a/FormCompleto.html
+++ b/FormCompleto.html
@@ -23,10 +23,10 @@
           </div>
 
           <div class="enlaces">
-              <a class="botonConBorde" href="./contacto.html">CONTÁCTANOS</a>
-              <a href="#nosotros">NOSOTROS</a>
-              <a href="#soluciones">SOLUCIONES</a>
-              <a href="#oficinas">OFICINAS</a>
+              <a class="botonConBorde" href="./pages/contacto.html">CONTÁCTANOS</a>
+              <a href="../index.html#nosotros">NOSOTROS</a>
+              <a href="../index.html#soluciones">SOLUCIONES</a>
+              <a href="../index.html#oficinas">OFICINAS</a>
               <a class="textoNegrita" href="./FormCompleto.html">SOLICITAR REUNIÓN</a>
           </div>
           <button class="btn-menu">
@@ -125,7 +125,7 @@
       </div>        
       </div>
 
-      <a class="btn-verde delFooter1" href="./contacto.html">Contáctanos</a>
+      <a class="btn-rosa delFooter1" href="./pages/contacto.html">Contáctanos</a>
       <a class="btn-rosa delFooter" href="./FormCompleto.html">Solicitar reunión</a>
       <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
   </footer>
