--- a/pages/portfolioYair.html
+++ b/pages/portfolioYair.html
@@ -24,7 +24,7 @@
                     </a>
                     </div>
                     <div class="enlaces">
-                        <a class="botonConBorde" href="./pages/contacto.html">CONTÁCTANOS</a>
+                        <a class="botonConBorde" href="./contacto.html">CONTÁCTANOS</a>
                         <a href="../index.html#nosotros">NOSOTROS</a>
                         <a href="../index.html#soluciones">SOLUCIONES</a>
                         <a href="../index.html#oficinas">OFICINAS</a>
@@ -99,7 +99,7 @@
             <a href="https://es-la.facebook.com/" target="_blank"><img class="Facebook" src="../img/icon face.svg" alt="Icono"></a>
         </div>        
         </div>
-        <a class="btn-verde delFooter1" href="./pages/contacto.html">Contáctanos</a>
+        <a class="btn-rosa delFooter1" href="./contacto.html">Contáctanos</a>
         <a class="btn-rosa delFooter" href="../FormCompleto.html">Solicitar reunión</a>
         <p><strong> DevScrum</strong> ©️ 2023 Todos los derechos reservados.</p>
     </footer>
