--- a/FormCompleto.html
+++ b/FormCompleto.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./FormStyle.css">
+    <link rel="icon" type="imagen/ico" href="./img/favicon.svg">
     <title>FormularioTresPasos</title>
 </head>
 
@@ -12,16 +16,16 @@
     <nav>
       <div class="encabezadoFijo">
       <div class="logo">
-          <a href="../index.html">
-            <img class="favicon" src="../img/favicon.svg" alt="Icono">
+          <a href="./index.html">
+            <img class="favicon" src="./img/favicon.svg" alt="Icono">
               <h2 >DevScrum</h2>
           </a>
         </div>
           <div class="enlaces">
               <a class="botonConBorde" href="./pages/contacto.html">CONTÁCTANOS</a>
-              <a href="../index.html#nosotros">NOSOTROS</a>
-              <a href="../index.html#soluciones">SOLUCIONES</a>
-              <a href="../index.html#oficinas">OFICINAS</a>
+              <a href="./index.html#nosotros">NOSOTROS</a>
+              <a href="./index.html#soluciones">SOLUCIONES</a>
+              <a href="./index.html#oficinas">OFICINAS</a>
               <a class="textoNegrita" href="./FormCompleto.html">SOLICITAR REUNIÓN</a>
           </div>
             <button class="btn-menu">
