--- a/FormCompleto.html
+++ b/FormCompleto.html
@@ -36,6 +36,7 @@
   </header>
 
 <body>
+  <!-- primera pagina -->
     <div class="tab1" id="paso1">
         <h1>Con el fin de brindar una rápida respuesta y solución a nuestros clientes, le haremos algunas preguntas y le pediremos algunos datos:</h1>
         <fieldset class="Pres">
@@ -59,10 +60,11 @@
       </div>
       <label class="Fech" for="fecha">Por favor, elija la fecha:</label>
 <input class="Fech" type="date" id="fecha" name="fecha">
-<hr>
-        <button class="btn" onclick="nextStep()">Siguiente</button>
+
+        <button class="btnAtras" onclick="history.back()">Volver Atrás</button>
+        <button class="btnSigUno" onclick="nextStep()">Siguiente</button>
       </div>
-<hr>
+<!-- segunda pagina -->
       <div class="tab2" id="paso2">
         <h1>Solicitud de Cotización</h1>
               <form class="SoliCotiz">
@@ -94,21 +96,21 @@
               <label><input id="condiciones" type="radio" name="condiciones" >Acepto los términos y condiciones previamente pactadas</label>
           </div> 
             </form>
-<hr>   
-        <button class="btn" onclick="prevStep()">Anterior</button>
-        <button class="btn" onclick="nextStep()">Siguiente</button>
+
+        <button class="btnAnterior" onclick="prevStep()">Anterior</button>
+        <button class="btnSigDos" onclick="nextStep()">Siguiente</button>
       </div>
-<hr>
+<!-- tercera pagina -->
       <div class="tab3" id="paso3">
         <h1>Le agradecemos por confiar en “DevSRum¨ y en este equipo que estará a su disposición para la realización de sus proyectos.  </h1>
        <div class="text">
         <legend>Su solicitud se ha registrado con éxito. A la brevedad, nos estaremos poniendo en contacto.</legend>
        </div>
-<hr>
-        <button class="btn" onclick="prevStep()">Anterior</button>
-        <button class="btn" onclick="submitForm()">Enviar</button>
+
+        <button class="btnAnterior" onclick="prevStep()">Anterior</button>
+        <button class="btnEnviar" onclick="submitForm()">Enviar</button>
       </div>
-<hr>
+
       <script src="./FormScript.js"></script>
 </body>
     <main></main>
